--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "产品简介"
-description: "Welcome to the home of your new documentation"
+description: "TextIn xParse for ETL 将复杂文档转变为结构化数据，只需TextIn智能文档解析。 让任意文档的信息都能高效准确流入您的数据库，将非结构化内容转化为可查询、可分析的宝贵数据资产，兼容关系型数据库与向量数据库。"
 ---
 
 <img
