Documentation edits made through Mintlify web editor

--- a/Parse/getcatalog.mdx
+++ b/Parse/getcatalog.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "获取目录树"
+description: "Description of your new file."
 ---
-
