--- a/Parse/getimage.mdx
+++ b/Parse/getimage.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "获取图片并替换链接"
+description: "Description of your new file."
 ---
-
