--- a/Extration/max-concurrent.mdx
+++ b/Extration/max-concurrent.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "多并发请求"
+description: "Description of your new file."
 ---
-
