--- a/Parse/chunk.mdx
+++ b/Parse/chunk.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "分CHUNK"
+description: "Description of your new file."
 ---
-
