--- a/Parse/getmarkdown.mdx
+++ b/Parse/getmarkdown.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "获取Markdown"
+description: "Description of your new file."
 ---
-
