--- a/Parse/getpos.mdx
+++ b/Parse/getpos.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "前端可视化：获取精确坐标"
+description: "Description of your new file."
 ---
-
