--- a/Parse/quickstart.mdx
+++ b/Parse/quickstart.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "快速启动"
+description: "Description of your new file."
 ---
-
