--- a/Parse/getJSON.mdx
+++ b/Parse/getJSON.mdx
@@ -1,4 +1,11 @@
 ---
 title: "获取JSON"
-description: "Description of your new file."
 ---
+
+当您想要获取JSON结果并以.json格式文件保存时，您可以参考以下示例代码。
+
+```python
+# 保存完整的JSON响应到result.json文件
+with open("result.json", "w", encoding="utf-8") as f:
+    f.write(response)
+```
