Documentation edits made through Mintlify web editor

--- a/Parse/quickstart.mdx
+++ b/Parse/quickstart.mdx
@@ -256,9 +256,7 @@ if __name__ == "__main__":
 
 ### 返回结果示例
 
-当您使用智能文档解析API时，解析后的结果数据将按照以下JSON格式返回，下面为您提供了一段返回示例。
-
-如果您想了解最全面的返回结果，可以在[API文档](https://www.textin.com/document/pdf_to_markdown)中查看。
+当您使用智能文档解析API时，解析后的结果数据将按照以下JSON格式返回，下面为您提供了一段返回示例。如果您想了解最全面的返回结果，可以在[API文档](https://www.textin.com/document/pdf_to_markdown)中查看。
 
 ```json
 {
