Documentation edits made through Mintlify web editor

--- a/Extration/quickstart.mdx
+++ b/Extration/quickstart.mdx
@@ -162,7 +162,7 @@ asyncio.run(main())
 
 **示例1: prompt模式-返回对象**
 
-```json
+```json [expandable]
 {
   "result": {
     "pages": [ // 文档每一页的元信息列表
@@ -257,7 +257,7 @@ asyncio.run(main())
 
 **示例2: prompt模式-返回数组**
 
-```json
+```json [expandable]
 {
   "x_request_id": "f6cd2d7e8cdd21a717a89b13e74bb6f9", // 本次请求的唯一标识
   "result": {
@@ -425,7 +425,7 @@ asyncio.run(main())
 
 **示例3: 自定义key模式**
 
-```json
+```json [expandable]
 {
   "version": "v1.6.5", // 返回结果的版本号
   "code": 200, // 状态码，200表示成功
