--- a/Parse/quickstart.mdx
+++ b/Parse/quickstart.mdx
@@ -57,14 +57,6 @@ def main():
 当您使用智能文档解析API想要解析单个本地文件时，您可以参考以下示例代码。
 
 ```python
-        # 设置请求头
-        headers = {
-            "x-ti-app-id": self.app_id,
-            "x-ti-secret-code": self.secret_code,
-            # 读取本地文件
-            "Content-Type": "application/octet-stream"
-
-
     # 在main函数中插入
     # 读取本地文件
     with open("你的文件.pdf", "rb") as f:
@@ -114,14 +106,6 @@ if __name__ == "__main__":
 当您使用智能文档解析API想要解析多个本地文件时，您可以参考以下示例代码。
 
 ```python
-        # 设置请求头
-        headers = {
-            "x-ti-app-id": self.app_id,
-            "x-ti-secret-code": self.secret_code,
-            # 读取本地文件
-            "Content-Type": "application/octet-stream"
-
-
     # 在main函数中插入
     # 读取本地文件夹
     input_dir = "./tmp"  # 你可以修改为自己的文件夹
@@ -180,10 +164,7 @@ if __name__ == "__main__":
 
 ```python
         # 设置请求头
-        headers = {
-            "x-ti-app-id": self.app_id,
-            "x-ti-secret-code": self.secret_code,
-            # 使用URL方式
+        # 使用URL方式
             "Content-Type": "text/plain"
 
 
@@ -258,7 +239,7 @@ if __name__ == "__main__":
 
 当您使用智能文档解析API时，解析后的结果数据将按照以下JSON格式返回，下面为您提供了一段返回示例。如果您想了解最全面的返回结果，可以在[API文档](https://www.textin.com/document/pdf_to_markdown)中查看。
 
-```json
+```json [expandable]
 {
   "code": 200, // 状态码，200表示成功
   "message": "success", // 返回信息
